--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item"> 
-          <img src="img/whoisfaker/Screenshot 16-01-2025 203823.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active"> 
+          <img src="img/chopper/Screenshot 20-04-2025 153045.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/spacequest/Screenshot 02-04-2025 001349.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -133,6 +133,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/chopper/Screenshot 20-04-2025 153045.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Chopper</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Chopper.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/chopper?secret=iiBiezGVJ6IC4M4uZbLURoNQvoU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
@@ -387,7 +404,7 @@
                     <a href="TryThis.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://scratch.mit.edu/projects/874792956/" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">  Free</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
