--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/epicbrawl/Screenshot 27-01-2025 165717.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/Aim Fire/Screenshot 28-04-2025 001209.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active"> 
+        <div class="carousel-item"> 
           <img src="img/chopper/Screenshot 20-04-2025 153045.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -133,6 +133,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/Aim Fire/Screenshot 28-04-2025 001209.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Aim Fire</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="AimFire.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/aim-fire?secret=fanAm8gKff8gTWUufzqtUGRyE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
@@ -205,14 +222,14 @@
 
           <div class="col">
             <div class="card shadow-sm styleUpdate">
-              <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
+              <img src="img/kabide/Screenshot 09-03-2025 212004.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-success reggae-one-regular gameTitle">Rare Racing</h3>
+                <h3 class="text-success reggae-one-regular gameTitle">Kabide</h3>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="RareRacing.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/rare?secret=PFDtJCQQ4dXhSlOk0EDcKMA4o20" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="Kabide.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/kabide?secret=Le4thvvo4sKD29e58wg3m585Z4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -222,14 +239,14 @@
 
           <div class="col">
             <div class="card shadow-sm styleUpdate">
-              <img src="img/kabide/Screenshot 09-03-2025 212004.jpg" height="225"> 
+              <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-success reggae-one-regular gameTitle">Kabide</h3>
+                <h3 class="text-success reggae-one-regular gameTitle">Rare Racing</h3>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="Kabide.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/kabide?secret=Le4thvvo4sKD29e58wg3m585Z4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="RareRacing.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/rare?secret=PFDtJCQQ4dXhSlOk0EDcKMA4o20" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
